--- a/CrudDotNetCoreApi/appsettings.json
+++ b/CrudDotNetCoreApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConApp": "Server=MOHDMIYAKHAN; Database=AngularDb; Integrated Security=true;"
+    "ConApp": "Server=SURFACE-PRO-9; Database=AngularDb; Integrated Security=true;"
   },
   "AllowedHosts": "*"
 }
